--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>My.Shoppy</title>
+    <link rel="icon" type="image/png" href="../src/Components/Stuff/Favicon/fastcart.png" >
 
     <!-- CSS bootstrap link Start-->
 
