code format prettier

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>My.Shoppy</title>
-    <link rel="icon" type="image/png" href="../src/Components/Stuff/Favicon/fastcart.png" >
+    <link
+      rel="icon"
+      type="image/png"
+      href="../src/Components/Stuff/Favicon/fastcart.png"
+    />
 
     <!-- CSS bootstrap link Start-->
 
