--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>My.Shoppy</title>
+    <title>my.Shoppy</title>
     <link
       rel="icon"
       type="image/png"
